box-sizing changed to border-box to fix the padding shifting content problem, width of the profile-buttons:hover rearranged

--- a/indexstyle.css
+++ b/indexstyle.css
@@ -114,7 +114,7 @@ body {
 }
 
 .profile-buttons:hover {
-    width: 200px;
+    width: 40vw;
 }
 
 .hoverable {
@@ -137,6 +137,7 @@ body {
 /*CONTENT PAGE*/
 
 .content {
+    box-sizing: border-box;
     padding-left: 11%;
     padding-top: 11.5%;
     padding-bottom: 30%;
